# Whiff

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: options.cmake  showoptions.cmake
cmake/compiler/msvc/: settings.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
dep/MologieDetours/: CMakeLists.txt  DetourManager.h  USAGE.txt  VERSION  detours.h  hde.cpp  hde.h
dep/MologieDetours/include/: hde32.h  hde64.h  table32.h  table64.h
dep/MologieDetours/src/: hde32.cpp  hde64.cpp
src/: CMakeLists.txt
src/injector/: CMakeLists.txt  main.cpp
src/shared/: Addresses.h  CMakeLists.txt  Define.h  Util.cpp  Util.h  uft8.h
src/sniffer/: CMakeLists.txt  Hooks.h  Sniffer.cpp  Sniffer.h  main.cpp
src/sniffer/Commands/: CommandHandler.h  CommandMgr.cpp  CommandMgr.h  ConsoleManager.h  SnifferConsole.cpp  SnifferConsole.h
src/sniffer/HexSearcher/: HexPatterns.h  HexSearcher.cpp  HexSearcher.h
src/sniffer/Opcodes/: OpcodeMgr.cpp  OpcodeMgr.h
